--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
       <div class="popup__content">
         <div class="popup__close" id="popup__close">&times;</div>
         <h2 class="popup__title">Add Book</h2>
-        <form class="form">
+        <div class="form">
           <label for="form__item-title"
             >Title
             <input
               type="text"
               class="form__item form__item-title"
               id="form__item-title"
+              required
             />
+            <div class="error-message">Please fill out this field</div>
           </label>
           <label for="form__item-author"
             >Author
@@ -49,7 +51,9 @@
               type="text"
               class="form__item form__item-author"
               id="form__item-author"
+              required
             />
+            <div class="error-message">Please fill out this field</div>
           </label>
           <label for="form__item-pages"
             >Pages
@@ -58,7 +62,9 @@
               class="form__item form__item-pages"
               id="form__item-pages"
               min="0"
+              required
             />
+            <div class="error-message">Please fill out this field</div>
           </label>
           <div class="form__status">
             <label for="not-read">
@@ -67,8 +73,8 @@
                 type="radio"
                 class="form__radio form__item-status"
                 id="not-read"
-                name="isRead"
-                value="false"
+                name="status"
+                value="Not Read"
                 checked
               />
             </label>
@@ -78,15 +84,16 @@
                 type="radio"
                 class="form__radio form__item-status"
                 id="read"
-                name="isRead"
-                value="true"
+                name="status"
+                value="Read"
               />
             </label>
           </div>
-          <button type="button" class="button button-submit">Submit</button>
-        </form>
+          <button type="button" class="button button-submit" id="button-submit">
+            Submit
+          </button>
+        </div>
       </div>
-      <div id="overlay"></div>
     </div>
     <script src="./index.js"></script>
   </body>
