Working commit button

--- a/index.html
+++ b/index.html
@@ -10,24 +10,12 @@
   <body>
     <header class="header">
       <div class="wrapper wrapper-header">
-        <h1 class="logo">lib</h1>
-        <button class="button button-add" id="button-add">Add</button>
+        <h1 class="logo">library</h1>
       </div>
     </header>
     <main class="main">
       <div class="wrapper wrapper-main">
-        <div class="category category-title">
-          <h3 class="heading heading-title">Title</h3>
-        </div>
-        <div class="category category-author">
-          <h3 class="heading heading-author">Author</h3>
-        </div>
-        <div class="category category-pages">
-          <h3 class="heading heading-pages">Pages</h3>
-        </div>
-        <div class="category category-status">
-          <h3 class="heading heading-status">Status</h3>
-        </div>
+        <button class="button button-add" id="button-add">Add</button>
       </div>
     </main>
     <div class="popup" id="popup">
