--- a/index.html
+++ b/index.html
@@ -39,8 +39,25 @@
           <div class="book__info book__info-title">Book Title</div>
           <div class="book__info book__info-author">by Book Author</div>
           <div class="book__info book__info-pages">123 pages</div>
-          <button class="book__info book__info-status">Not Read</button>
-          <button class="book__info book__info-remove">Remove</button>
+          <button class="book__info book__info-status book-info__btns">
+            Not Read
+          </button>
+          <button class="book__info book__info-remove book-info__btns">
+            Remove
+          </button>
+        </div>
+        <div class="book">
+          <div class="book__info book__info-title">Book Title</div>
+          <div class="book__info book__info-author">by Book Author</div>
+          <div class="book__info book__info-pages">123 pages</div>
+          <button
+            class="book__info book__info-status book__info-status-read book-info__btns"
+          >
+            Read
+          </button>
+          <button class="book__info book__info-remove book-info__btns">
+            Remove
+          </button>
         </div>
       </div>
     </main>
