--- a/index.html
+++ b/index.html
@@ -100,17 +100,29 @@
             <label class="form__label">Status</label>
             <div class="form__status">
               <div class="form__block-status">
-                <label for="form__radio-not-read">Not Read</label>
                 <input
                   type="radio"
                   class="form__radio"
+                  name="form__radio"
                   id="form__radio-not-read"
+                  value="Not Read"
                   checked
                 />
+                <label for="form__radio-not-read" class="form__label-radio"
+                  >Not Read</label
+                >
               </div>
               <div class="form__block-status">
-                <label for="form__radio-read">Read</label>
-                <input type="radio" class="form__radio" id="form__radio-read" />
+                <input
+                  type="radio"
+                  class="form__radio"
+                  name="form__radio"
+                  id="form__radio-read"
+                  value="Read"
+                />
+                <label for="form__radio-read" class="form__label-radio"
+                  >Read</label
+                >
               </div>
             </div>
           </div>
